--- a/eas.json
+++ b/eas.json
@@ -1,4 +1,7 @@
 {
+  "cli": {
+    "version": ">= 2.0.0"
+  },
   "build": {
     "development": {
       "developmentClient": true,
@@ -7,6 +10,18 @@
     "preview": {
       "distribution": "internal"
     },
+    "production": {
+      "android": {
+        "buildType": "apk"
+      },
+      "ios": {
+        "simulator": false,
+        "buildType": "adhoc",
+        "provisioningProfilePath": "./path/to/your-adhoc-provisioning-profile.mobileprovision"
+      }
+    }
+  },
+  "submit": {
     "production": {}
   }
 }
