--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "version": ">= 2.0.0"
+    "version": ">= 10.0.3"
   },
   "build": {
     "development": {
@@ -10,11 +10,7 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {
-      "android": {
-        "buildType": "apk"
-      },
-    }
+    "production": {}
   },
   "submit": {
     "production": {}
